# gitvault

./: .editorconfig  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  audit.toml  build.rs  requirment-base-20260301.md  rust-toolchain.toml
.cargo/: config.toml
.copilot/: context.md  instructions.cli.md  instructions.vscode-bg.md  instructions.vscode-ui.md
.copilot/skills/: deploy-semver.md
.copilot/skills/gh-cli/: SKILL.md
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/scripts/: post-create.sh  post-start.sh
.github/: SECURITY.md
.github/agents/: rut-gtp-4.1-beast-mode.agent.md  tdd-refactor.agent.md
.github/workflows/: build.yml  ci-verify.yml  release-macos-sign-notarize.yml  release-tag.yml  release.yml
docs/: cicd-recipes.md  development.md  identity-setup.md  macos-app-signing.md  recipient-management.md  reference.md  releasing.md  seal-vs-encrypt.md  secret-formats.md
docs/ai/: AGENT_START.md  agent-reference.md  cli-help.json  code-index.json  hotspots.md  skill.md
specs/2026-03-01-safesecrets/: 00-requirements-index.md  01-core-architecture.md  02-repository-layout.md  03-environment-model.md  04-production-barrier.md  05-root-env-handling.md  06-fileless-run-mode.md  07-aws-ssm-backend.md  08-git-integration.md  09-merge-optimization.md  10-key-management.md  11-security-requirements.md  12-cli-automation.md  13-cicd-compatibility.md  14-performance.md  15-testing-matrix.md  16-release-integrity.md  17-dev-shell.md  18-requirement-governance.md  19-ssh-identity-requirements.md  20-optional-keyring-passphrase-fetch.md  21-optional-ssh-agent-support.md  22-husky-hook-manager-plugin.md  23-pre-commit-hook-manager-plugin.md  24-lefthook-hook-manager-plugin.md  25-hook-adapter-config.md  26-global-config-layer.md  27-cli-help-xtask-nfr.md  28-ai-cli-skill-context-print.md  29-identity-security-improvements.md  30-passphrase-security-improvements.md  31-security-hardening.md
specs/2026-03-01-safesecrets-req/: 00-index.md  01-agent-assignment-matrix.md  req-001.md  req-002.md  req-003.md  req-004.md  req-005.md  req-006.md  req-007.md  req-008.md  req-009.md  req-010.md  req-011.md  req-012.md  req-013.md  req-014.md  req-015.md  req-016.md  req-017.md  req-018.md  req-019.md  req-020.md  req-021.md  req-022.md  req-023.md  req-024.md  req-025.md  req-026.md  req-027.md  req-028.md  req-029.md  req-030.md  req-031.md  req-032.md  req-033.md  req-034.md  req-035.md  req-036.md  req-037.md  req-038.md  (+48 more)
specs/2026-03-04-engineering-nfr/: nfr-002-wrapper-extraction.md  req-098.md  req-099.md  req-100.md  req-107.md  req-108.md  req-109.md  req-110.md  req-111.md  req-112.md  req-113.md  req-114.md  req-115.md  req-116.md  req-117.md  req-118.md  req-119.md
specs/2026-03-04-security-nfr/: nfr-001-security-engineering.md  req-087.md  req-088.md  req-089.md  req-090.md  req-091.md  req-092.md  req-093.md  req-094.md  req-095.md  req-096.md  req-097.md  req-101.md  req-102.md  req-103.md  req-104.md  req-105.md  req-106.md  req-110.md  req-111.md  req-112.md  req-113.md
specs/_templates/: spec.md
src/: aws_config.rs  barrier.rs  cli.rs  config.rs  crypto.rs  defaults.rs  dispatch.rs  env.rs  error.rs  fhsm.rs  fs_util.rs  git.rs  identity.rs  keyring_store.rs  lib.rs  main.rs  matcher.rs  materialize.rs  merge.rs  output.rs  path_utils.rs  permissions.rs  repo.rs  run.rs  ssh.rs  ssm.rs  store.rs  structured.rs
src/commands/: admin.rs  ai.rs  decrypt.rs  edit.rs  effects.rs  encrypt.rs  identity.rs  init.rs  keyring.rs  kv.rs  materialize.rs  mod.rs  recipients.rs  run_cmd.rs  seal.rs  test_helpers.rs
src/commands/admin/: gitattributes.rs  gitignore.rs  hooks.rs  mod.rs
src/repo/: drift.rs  hooks.rs  mod.rs  paths.rs  plugin.rs  recipients.rs
src/ssm/: backend.rs  commands.rs  mod.rs  refs.rs
src/structured/: armor.rs  env_values.rs  fields.rs  helpers.rs  mod.rs
tests/: adapters.rs  cli_integration.rs  hooks.rs  merge_driver.rs  recipients.rs
tests/common/: mod.rs
tools/: spec_init.sh  spec_verify.sh  worktree.sh
tools/specguard/: Cargo.toml
tools/specguard/src/: main.rs
xtask/: Cargo.toml
xtask/src/: main.rs
