[package]
name = "gitvault"
version = "0.2.14"
authors = ["Andreas Heissenberger"]
repository = "https://github.com/aheissenberger/gitvault"
homepage = "https://github.com/aheissenberger/gitvault"
keywords = ["secrets", "encryption", "age", "git", "dotenv"]
categories = ["command-line-utilities", "cryptography"]
edition = "2024"
description = "gitvault CLI"
license = "MIT"

[[bin]]
name = "gitvault"
path = "src/main.rs"

[lib]
name = "gitvault"
path = "src/lib.rs"

[dependencies]
age = { version = "0.10", features = ["armor"] }
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"
toml = { version = "0.8", features = ["preserve_order"] }
thiserror = "1"
tempfile = "3"
keyring = "3"
dotenvy = "0.15"
regex = "1"
base64 = "0.22"
aws-config  = { version = "1.1.7",   features = ["behavior-version-latest"], optional = true }
aws-sdk-ssm = { version = "1.106.0", optional = true }
tokio       = { version = "1",        features = ["rt-multi-thread", "macros"], optional = true }

[features]
ssm = ["dep:aws-config", "dep:aws-sdk-ssm", "dep:tokio"]

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = "symbols"