[package]
name = "gitvault"
version = "0.2.23"
authors = ["Andreas Heissenberger"]
repository = "https://github.com/aheissenberger/gitvault"
homepage = "https://github.com/aheissenberger/gitvault"
keywords = ["secrets", "encryption", "age", "git", "dotenv"]
categories = ["command-line-utilities", "cryptography"]
edition = "2024"
rust-version = "1.93"
description = "gitvault CLI"
license = "MIT"

[[bin]]
name = "gitvault"
path = "src/main.rs"

[lib]
name = "gitvault"
path = "src/lib.rs"

[dependencies]
age = { version = "0.10", features = ["armor", "ssh"] }
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"
toml = { version = "0.8", features = ["preserve_order"] }
thiserror = "1"
tempfile = "3"
dotenvy = "0.15"
regex = "1"
base64 = "0.22"
zeroize = { version = "1", features = ["zeroize_derive"] }
aws-config  = { version = "1.1.7",   features = ["behavior-version-latest"], optional = true }
aws-sdk-ssm = { version = "1.106.0", optional = true }
tokio       = { version = "1",        features = ["rt-multi-thread", "macros"], optional = true }
async-trait = { version = "0.1", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
# REQ-39: OS keyring — macOS Keychain via Security framework
keyring = { version = "3", features = ["apple-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
# REQ-39: OS keyring — Linux kernel keyutils (no external library needed)
keyring = { version = "3", features = ["linux-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
# REQ-39: OS keyring — Windows Credential Manager
keyring = { version = "3", features = ["windows-native"] }

[features]
ssm = ["dep:aws-config", "dep:aws-sdk-ssm", "dep:tokio", "dep:async-trait"]

[dev-dependencies]
mockall = "0.12"

[profile.release]
strip = "symbols"
lto = true
codegen-units = 1
panic = "abort"

[profile.release-min]
inherits = "release"
opt-level = "z"